<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:iconTint="@color/ic_penn_state_background"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_campus"
            android:icon="@drawable/ic_list"
            android:iconTint="@color/ic_penn_state_background"
            android:title="@string/menu_campus" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_google_map"
            android:iconTint="@color/ic_penn_state_background"
            android:title="@string/menu_maps" />
    </group>
</menu>