<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ic_penn_state_background"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/image_home_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/penn_state_logo_with_name"
        android:paddingTop="0dp"
        android:paddingBottom="15dp"
        app:srcCompat="@drawable/ic_penn_state_logo_foreground" />

    <TextView
        android:id="@+id/home_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="@string/frag_home_welcome"
        android:textColor="#1E407C"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/identifier_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:padding="15dp"
        android:text="@string/campus_locator"
        android:textAlignment="center"
        android:textColor="#1E407C"
        android:textSize="20sp" />

</LinearLayout>